--- a/index.html
+++ b/index.html
@@ -4,60 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pac-Man Game</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
-    #gameContainer {
-      width: 500px;
-      height: 500px;
-      background-color: black;
-      position: relative;
-      margin: 20px auto;
-      border: 20px solid orangered;
-      outline: 20px solid red;
-    }
-    #startButton {
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    #nameInput {
-      font-size: 16px;
-      padding: 5px;
-    }
-    #score {
-      font-size: 20px;
-      color: black;
-      margin-top: 20px;
-    }
-    #gameOver {
-      display: none;
-      font-size: 30px;
-      color: black;
-      margin-top: 20px;
-    }
-    .pacman {
-      width: 30px;
-      height: 30px;
-      position: absolute;
-      background-image: url('https://gifdb.com/images/thumbnail/classic-pacman-pixelated-icon-8suswgu61ehudg7t.gif');
-      background-size: cover;
-      transition: transform 0.1s ease;
-    }
-    .ghost {
-      width: 25px;
-      height: 25px;
-      position: absolute;
-      background-image: url('https://www.giantbomb.com/a/uploads/scale_medium/8/87790/2469743-orange.png');
-      background-size: cover;
-    }
-
-    .hide{
-        display: none;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJ6D1lEeBmEJbFf8wJs-mrPCd3m7YjQ_KJEQ&s" type="image/x-icon">
 </head>
 <body>
   <h1>Pac-Man Game</h1>
@@ -70,9 +19,9 @@
         <div id="gameOver"></div>
         <div id="gameContainer"></div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
   <script>
-       const section1=  document.querySelector(".section1");
+    const section1=  document.querySelector(".section1");
     const section2=  document.querySelector(".section2");
     section2.classList.add("hide")
     const gameContainer = document.getElementById('gameContainer');
@@ -80,6 +29,12 @@
     const startButton = document.getElementById('startButton');
     const nameInput = document.getElementById('nameInput');
     const gameOverDisplay = document.getElementById('gameOver');
+
+    var notyf = new Notyf();
+
+
+
+
     
     let pacman = { x: 10, y: 10 };
     let ghost = { x: 200, y: 200 };
@@ -173,7 +128,8 @@
       clearInterval(gameInterval);
       isGameOver = true;
       gameOverDisplay.style.display = 'block';
-      gameOverDisplay.textContent = `Game Over, ${nameInput.value}! Final Score: ${score}`;
+      notyf.error(`Game Over, ${nameInput.value}! Final Score: ${score}`);
+
     }
 
     document.addEventListener('keydown', (e) => {
