changing the logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJ6D1lEeBmEJbFf8wJs-mrPCd3m7YjQ_KJEQ&s" type="image/x-icon">
 </head>
 <body>
-  <h1>Pac-Man Game</h1>
+  <img src="media/logo.png" alt="logo" width="300px">
     <div class="section1">
         <input type="text" id="nameInput" placeholder="Enter your name">
         <button id="startButton">Start Game</button>
